# methods-for-solving-of-slae

./: .gitignore  CMakeLists.txt  README.md
1/: CMakeLists.txt
benchmark/: CMakeLists.txt  benchmark_elliptic_methods.cpp  benchmark_iterative_solvers.cpp  benchmark_matvec.cpp  elliptic_history.csv  elliptic_summary.csv  iterative_history.csv  iterative_summary.csv  matvec_results.csv  plot_iterative_benchmark.py  plot_matvec_benchmark.py
src/: CMakeLists.txt
src/common/: types.hpp
src/csr_matrix/: csr_matrix.cpp  csr_matrix.hpp
src/dense_matrix/: dense_matrix.cpp  dense_matrix.hpp
src/elliptic_matrix/: elliptic_matrix.cpp  elliptic_matrix.hpp
src/gradient_methods/: gradient_methods.cpp  gradient_methods.hpp
src/householder_qr/: householder_qr.cpp  householder_qr.hpp
src/iterative_solvers/: iterative_solvers.cpp  iterative_solvers.hpp
src/tridiagonal_solver/: tridiagonal_solver.cpp  tridiagonal_solver.hpp
src/vector_operations/: vector_operations.cpp  vector_operations.hpp
tests/: CMakeLists.txt  test_csr_matrix.cpp  test_dense_matrix.cpp  test_elliptic_matrix.cpp  test_gradient_methods.cpp  test_householder_qr.cpp  test_iterative_solvers.cpp  test_matrix_vector_multiplication.cpp  test_qr_solver.cpp  test_tridiagonal_solver.cpp  test_vector_operations.cpp
